# raytracer

./: .gitignore  CMakeLists.txt  README.md
cameras/: Pinhole.cpp
core/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Material.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
lights/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h
main/: main.cpp
materials/: BlinnPhong.h
shapes/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  TriMesh.h  Triangle.cpp  Triangle.h  selfbalance.cpp  selfbalance.hpp
